Updating rotating words text and definition to fix wrapping on mobile

--- a/assets/stylesheets/_about.scss
+++ b/assets/stylesheets/_about.scss
@@ -7,7 +7,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 3rem 0 0 0;
+    margin: 4rem 0 0 0;
 
     img {
       border-radius: 100%;
@@ -20,6 +20,7 @@ header {
 
 .tiles {
   padding: 3rem 0;
+
   .tile {
     h5 {
       margin: 0 0 1rem 0;
@@ -28,49 +29,26 @@ header {
   }
 }
 
-// .avatar {
-//   -webkit-animation-name: avatar;
-//   -webkit-animation-duration: .9s;
-// }
-
-// @-webkit-keyframes avatar {
-//   from {
-//     -webkit-transform: scale(0);
-//     opacity: 0;
-//   }
-
-//   50% {
-//     -webkit-transform: scale(0);
-//     opacity: 0;
-//   }
-
-//   82.5% {
-//     -webkit-transform: scale(1.03);
-//     -webkit-animation-timing-function: ease-out;
-//     opacity: 1;
-//   }
-
-//   to {
-//     -webkit-transform: scale(1);
-//   }
-// }
-
 // ==============================
 // Rotating Words
 // ==============================
 
 .rotating-wrapper {
-  position: relative;
+  //position: relative;
 }
 
 h4.rotating-sentence {
-  font-size: 1.80rem;
+  font-size: 1.5rem;
   margin: 4rem 0;
-  padding-bottom: 3rem;
+  padding-bottom: 2rem;
+  position: relative;
+
+  @media only screen and (min-width: 568px) {
+    padding-bottom: 0;
+  }
 
   @media only screen and (min-width: 48em) {
-    padding-bottom: 0rem;
-
+    font-size: 1.80rem;
   }
 
   span {
@@ -79,23 +57,24 @@ h4.rotating-sentence {
 }
 
 .rotating-words {
-  @media only screen and (min-width: 48em) {
+
+  @media only screen and (min-width: 568px) {
     display: inline;
-    text-indent: .25em;
+    text-indent: 0.5rem;
   }
 }
 
 .rotating-word {
-
   span {
+    animation: rotateWord 18s linear infinite 0s;
     font-weight: 900 !important;
     position: absolute;
     opacity: 0;
     overflow: hidden;
     font-weight: 900;
+    width: auto;
     -webkit-animation: rotateWord 18s linear infinite 0s;
     -ms-animation: rotateWord 18s linear infinite 0s;
-    animation: rotateWord 18s linear infinite 0s;
 
     &:nth-child(2) {
       -webkit-animation-delay: 3s;
